<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    android:weightSum="2">


    <TableRow android:minHeight="30dp">

        <TextView
            android:id="@+id/checkAntigens"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            android:text="@string/textview"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </TableRow>

    <TableRow android:minHeight="30dp">

        <EditText
            android:id="@+id/numberOfUnits"
            android:layout_gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/numberOfUnits"
            android:inputType="number" />
    </TableRow>

    <TableRow android:minHeight="50dp">

        <CheckBox
            android:id="@+id/C"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/C"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/c" />
    </TableRow>

    <TableRow android:minHeight="50dp">

        <CheckBox
            android:id="@+id/E"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/E" />

        <CheckBox
            android:id="@+id/K"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/K" />
    </TableRow>

    <TableRow android:minHeight="50dp">

        <CheckBox
            android:id="@+id/e"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/e" />

        <CheckBox
            android:id="@+id/N"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/N" />
    </TableRow>

    <TableRow android:minHeight="50dp">

        <CheckBox
            android:id="@+id/Fya"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/Fya" />

        <CheckBox
            android:id="@+id/S"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/S" />
    </TableRow>

    <TableRow android:minHeight="50dp">

        <CheckBox
            android:id="@+id/Fyb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/Fyb" />

        <CheckBox
            android:id="@+id/s"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/s" />
    </TableRow>

    <TableRow android:minHeight="50dp">

        <CheckBox
            android:id="@+id/Lea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/Lea" />

        <CheckBox
            android:id="@+id/Leb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/Leb" />
    </TableRow>

    <TableRow android:minHeight="50dp">

        <CheckBox
            android:id="@+id/M"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/M" />

        <CheckBox
            android:id="@+id/Jka"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/Jka" />
    </TableRow>

    <TableRow android:minHeight="50dp">

        <CheckBox
            android:id="@+id/Jkb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/Jkb" />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit" />
    </TableRow>
</TableLayout>



